--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:allowBackup="true"
+        android:icon="@mipmap/icon_24dp"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/icon_24dp"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".Home" />
+
+        </activity>
        
     </application>
 
