added activity for Green color status of rooms

--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Home" />
+        <activity android:name=".ScannerGreen" />
 
         </activity>
        
