--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Home" />
         <activity android:name=".ScannerGreen" />
+        <activity android:name=".ScannerRed" />
 
         </activity>
        
