Activity for Registration added

--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".ScannerRed" />
          <activity android:name=".ScannerYellow" />
           <activity android:name=".ScannerParent" />
+          <activity android:name=".Registration" />
 
         </activity>
        
