Splash activity added

--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
          <activity android:name=".ScannerYellow" />
           <activity android:name=".ScannerParent" />
           <activity android:name=".Registration" />
+          <activity android:name=".Splash">
 
         </activity>
        
