For the splash screen to first show up when mobile app is open

--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
           <activity android:name=".ScannerParent" />
           <activity android:name=".Registration" />
           <activity android:name=".Splash">
+             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
 
         </activity>
        
