--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter> 
+        </activity>
+        <activity android:name=".ScannerParent1" />
 
 
         </activity>
