Activity for color green room status

--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             </intent-filter> 
         </activity>
         <activity android:name=".ScannerParent1" />
+         <activity android:name=".ScannerGreen1" />
 
 
         </activity>
