Activity for yellow room status

--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         </activity>
         <activity android:name=".ScannerParent1" />
          <activity android:name=".ScannerGreen1" />
+          <activity android:name=".ScannerYellow1" />
 
 
         </activity>
