--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -30,10 +30,11 @@
             </intent-filter> 
         </activity>
         <activity android:name=".ScannerParent1" />
-         <activity android:name=".ScannerGreen1" />
-          <activity android:name=".ScannerYellow1" />
-            <activity android:name=".ScannerRed1" />
+        <activity android:name=".ScannerGreen1" />
+        <activity android:name=".ScannerYellow1" />
+        <activity android:name=".ScannerRed1" />
         <activity android:name=".ScannerRedTwoWay" />
+        <activity android:name=".CheckList" />
 
 
 
