Another activity for Two way red room color status

--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".ScannerRed1" />
         <activity android:name=".ScannerRedTwoWay" />
         <activity android:name=".CheckList" />
+        <activity android:name=".ScannerRedTwoWay1" />
 
 
 
