Another activity for checklist 1

--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".ScannerRedTwoWay" />
         <activity android:name=".CheckList" />
         <activity android:name=".ScannerRedTwoWay1" />
+        <activity android:name=".Checklist1" />
 
 
 
