Activity for login

--- a/Ispect/app/src/main/AndroidManifest.xml
+++ b/Ispect/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         <activity android:name=".CheckList" />
         <activity android:name=".ScannerRedTwoWay1" />
         <activity android:name=".Checklist1" />
-
+        <activity android:name=".Login"></activity>
 
 
 
